docs(groups): update docs for groups
